--- a/terms.html
+++ b/terms.html
@@ -121,8 +121,8 @@
         </div>
 
         <div class="version-box">
-            <p><strong>Date d'entrée en vigueur :</strong> 1er janvier 2025</p>
-            <p><strong>Dernière mise à jour :</strong> 25 décembre 2024</p>
+            <p><strong>Date d'entrée en vigueur :</strong> 1er janvier 2026</p>
+            <p><strong>Dernière mise à jour :</strong> 25 décembre 2025</p>
             <p><strong>Version :</strong> 1.0</p>
         </div>
 
@@ -302,7 +302,7 @@
         <h2>14. Contact</h2>
         <div class="contact">
             <p>Pour toute question concernant ces Conditions d'Utilisation :</p>
-            <p><strong>Email :</strong> <a href="mailto:contact@samakalpe.com">contact@samakalpe.com</a></p>
+            <p><strong>Email :</strong> <a href="mailto:samakalpe.officiel@gmail.com">samakalpe.officiel@gmail.com</a></p>
             <p><strong>Développeur :</strong> Ibrahima Diallo</p>
         </div>
 
@@ -318,7 +318,7 @@
         </ul>
 
         <footer>
-            <p>© 2025 Sama Kalpé. Tous droits réservés.</p>
+            <p>© 2026 Sama Kalpé. Tous droits réservés.</p>
             <p style="margin-top: 10px;">
                 <a href="privacy-policy.html">Politique de Confidentialité</a>
             </p>
